--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Anh Minh 
 logo: 
-show_downloads: True
-remote_theme: pages-themes/cayman@v0.2.0
+show_downloads: False
+remote_theme: pages-themes/time-machine@v0.2.0
 plugins:
 - jekyll-remote-theme
